src/main/java/edu/mit/ll/antlr/aexp17Parser.java
// $ANTLR 3.5.2 /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g 2016-03-13 07:51:52

package edu.mit.ll.antlr;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class aexp17Parser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALL", "AND", "COMMENT", "ESC_SEQ", 
		"HEX_DIGIT", "ID", "INT", "NEWLINE", "NOT", "OCTAL_ESC", "OR", "STRING", 
		"UNICODE_ESC", "WS", "'#'", "'('", "')'", "'*'", "','", "'.'", "'/'", 
		"':'", "';'", "'?'", "'['", "']'", "'_'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int ALL=4;
	public static final int AND=5;
	public static final int COMMENT=6;
	public static final int ESC_SEQ=7;
	public static final int HEX_DIGIT=8;
	public static final int ID=9;
	public static final int INT=10;
	public static final int NEWLINE=11;
	public static final int NOT=12;
	public static final int OCTAL_ESC=13;
	public static final int OR=14;
	public static final int STRING=15;
	public static final int UNICODE_ESC=16;
	public static final int WS=17;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public aexp17Parser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public aexp17Parser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return aexp17Parser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g"; }


	boolean debug = false;
	public void enableDebug(boolean value){
	this.debug = value;
	}
	public boolean caseInsensitive = false;
	public void enableCaseInsensitive(boolean caseInsensitive) {
	this.caseInsensitive = caseInsensitive;    
	}



	public static class start_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "start"
	// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:35:1: start : r_exp ;
	public final aexp17Parser.start_return start() throws RecognitionException {
		aexp17Parser.start_return retval = new aexp17Parser.start_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope r_exp1 =null;


		try {
			// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:36:3: ( r_exp )
			// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:37:3: r_exp
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_r_exp_in_start76);
			r_exp1=r_exp();
			state._fsp--;

			adaptor.addChild(root_0, r_exp1.getTree());


			  if(this.debug)
			    System.out.println((r_exp1!=null?((CommonTree)r_exp1.getTree()):null)==null?"null":(r_exp1!=null?((CommonTree)r_exp1.getTree()):null).toStringTree());
			  
			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "start"


	public static class r_exp_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "r_exp"
	// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:44:1: r_exp : ( period_exp ( ( AND ^| OR ^) period_exp )* | NOT r_exp -> ^( NOT r_exp ) );
	public final aexp17Parser.r_exp_return r_exp() throws RecognitionException {
		aexp17Parser.r_exp_return retval = new aexp17Parser.r_exp_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token AND3=null;
		Token OR4=null;
		Token NOT6=null;
		ParserRuleReturnScope period_exp2 =null;
		ParserRuleReturnScope period_exp5 =null;
		ParserRuleReturnScope r_exp7 =null;

		CommonTree AND3_tree=null;
		CommonTree OR4_tree=null;
		CommonTree NOT6_tree=null;
		RewriteRuleTokenStream stream_NOT=new RewriteRuleTokenStream(adaptor,"token NOT");
		RewriteRuleSubtreeStream stream_r_exp=new RewriteRuleSubtreeStream(adaptor,"rule r_exp");

		try {
			// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:45:3: ( period_exp ( ( AND ^| OR ^) period_exp )* | NOT r_exp -> ^( NOT r_exp ) )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==ALL||LA3_0==ID||LA3_0==19||LA3_0==28||(LA3_0 >= 30 && LA3_0 <= 31)) ) {
				alt3=1;
			}
			else if ( (LA3_0==NOT) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:46:3: period_exp ( ( AND ^| OR ^) period_exp )*
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_period_exp_in_r_exp97);
					period_exp2=period_exp();
					state._fsp--;

					adaptor.addChild(root_0, period_exp2.getTree());

					// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:46:14: ( ( AND ^| OR ^) period_exp )*
					loop2:
					while (true) {
						int alt2=2;
						int LA2_0 = input.LA(1);
						if ( (LA2_0==AND||LA2_0==OR) ) {
							alt2=1;
						}

						switch (alt2) {
						case 1 :
							// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:46:15: ( AND ^| OR ^) period_exp
							{
							// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:46:15: ( AND ^| OR ^)
							int alt1=2;
							int LA1_0 = input.LA(1);
							if ( (LA1_0==AND) ) {
								alt1=1;
							}
							else if ( (LA1_0==OR) ) {
								alt1=2;
							}

							else {
								NoViableAltException nvae =
									new NoViableAltException("", 1, 0, input);
								throw nvae;
							}

							switch (alt1) {
								case 1 :
									// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:46:16: AND ^
									{
									AND3=(Token)match(input,AND,FOLLOW_AND_in_r_exp101); 
									AND3_tree = (CommonTree)adaptor.create(AND3);
									root_0 = (CommonTree)adaptor.becomeRoot(AND3_tree, root_0);

									}
									break;
								case 2 :
									// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:46:21: OR ^
									{
									OR4=(Token)match(input,OR,FOLLOW_OR_in_r_exp104); 
									OR4_tree = (CommonTree)adaptor.create(OR4);
									root_0 = (CommonTree)adaptor.becomeRoot(OR4_tree, root_0);

									}
									break;

							}

							pushFollow(FOLLOW_period_exp_in_r_exp108);
							period_exp5=period_exp();
							state._fsp--;

							adaptor.addChild(root_0, period_exp5.getTree());

							}
							break;

						default :
							break loop2;
						}
					}

					}
					break;
				case 2 :
					// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:48:3: NOT r_exp
					{
					NOT6=(Token)match(input,NOT,FOLLOW_NOT_in_r_exp118);  
					stream_NOT.add(NOT6);

					pushFollow(FOLLOW_r_exp_in_r_exp120);
					r_exp7=r_exp();
					state._fsp--;

					stream_r_exp.add(r_exp7.getTree());
					// AST REWRITE
					// elements: r_exp, NOT
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 48:13: -> ^( NOT r_exp )
					{
						// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:48:15: ^( NOT r_exp )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot(stream_NOT.nextNode(), root_1);
						adaptor.addChild(root_1, stream_r_exp.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "r_exp"


	public static class period_exp_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "period_exp"
	// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:51:1: period_exp : star_exp ( '#' ^ star_exp )* ;
	public final aexp17Parser.period_exp_return period_exp() throws RecognitionException {
		aexp17Parser.period_exp_return retval = new aexp17Parser.period_exp_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal9=null;
		ParserRuleReturnScope star_exp8 =null;
		ParserRuleReturnScope star_exp10 =null;

		CommonTree char_literal9_tree=null;

		try {
			// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:52:3: ( star_exp ( '#' ^ star_exp )* )
			// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:53:3: star_exp ( '#' ^ star_exp )*
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_star_exp_in_period_exp145);
			star_exp8=star_exp();
			state._fsp--;

			adaptor.addChild(root_0, star_exp8.getTree());

			// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:53:13: ( '#' ^ star_exp )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==18) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:53:14: '#' ^ star_exp
					{
					char_literal9=(Token)match(input,18,FOLLOW_18_in_period_exp149); 
					char_literal9_tree = (CommonTree)adaptor.create(char_literal9);
					root_0 = (CommonTree)adaptor.becomeRoot(char_literal9_tree, root_0);

					pushFollow(FOLLOW_star_exp_in_period_exp152);
					star_exp10=star_exp();
					state._fsp--;

					adaptor.addChild(root_0, star_exp10.getTree());

					}
					break;

				default :
					break loop4;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "period_exp"


	public static class star_exp_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "star_exp"
	// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:56:1: star_exp : slash_exp ( '*' ^ slash_exp )* ;
	public final aexp17Parser.star_exp_return star_exp() throws RecognitionException {
		aexp17Parser.star_exp_return retval = new aexp17Parser.star_exp_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal12=null;
		ParserRuleReturnScope slash_exp11 =null;
		ParserRuleReturnScope slash_exp13 =null;

		CommonTree char_literal12_tree=null;

		try {
			// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:57:3: ( slash_exp ( '*' ^ slash_exp )* )
			// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:58:3: slash_exp ( '*' ^ slash_exp )*
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_slash_exp_in_star_exp169);
			slash_exp11=slash_exp();
			state._fsp--;

			adaptor.addChild(root_0, slash_exp11.getTree());

			// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:58:13: ( '*' ^ slash_exp )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==21) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:58:14: '*' ^ slash_exp
					{
					char_literal12=(Token)match(input,21,FOLLOW_21_in_star_exp172); 
					char_literal12_tree = (CommonTree)adaptor.create(char_literal12);
					root_0 = (CommonTree)adaptor.becomeRoot(char_literal12_tree, root_0);

					pushFollow(FOLLOW_slash_exp_in_star_exp175);
					slash_exp13=slash_exp();
					state._fsp--;

					adaptor.addChild(root_0, slash_exp13.getTree());

					}
					break;

				default :
					break loop5;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "star_exp"


	public static class slash_exp_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "slash_exp"
	// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:60:1: slash_exp : ( atom2 ( '/' ^ atom2 )+ | atom2 ( '?' ^)+ | atom ( '.' ^ durations )* );
	public final aexp17Parser.slash_exp_return slash_exp() throws RecognitionException {
		aexp17Parser.slash_exp_return retval = new aexp17Parser.slash_exp_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal15=null;
		Token char_literal18=null;
		Token char_literal20=null;
		ParserRuleReturnScope atom214 =null;
		ParserRuleReturnScope atom216 =null;
		ParserRuleReturnScope atom217 =null;
		ParserRuleReturnScope atom19 =null;
		ParserRuleReturnScope durations21 =null;

		CommonTree char_literal15_tree=null;
		CommonTree char_literal18_tree=null;
		CommonTree char_literal20_tree=null;

		try {
			// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:61:3: ( atom2 ( '/' ^ atom2 )+ | atom2 ( '?' ^)+ | atom ( '.' ^ durations )* )
			int alt9=3;
			alt9 = dfa9.predict(input);
			switch (alt9) {
				case 1 :
					// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:62:3: atom2 ( '/' ^ atom2 )+
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_atom2_in_slash_exp191);
					atom214=atom2();
					state._fsp--;

					adaptor.addChild(root_0, atom214.getTree());

					// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:62:9: ( '/' ^ atom2 )+
					int cnt6=0;
					loop6:
					while (true) {
						int alt6=2;
						int LA6_0 = input.LA(1);
						if ( (LA6_0==24) ) {
							alt6=1;
						}

						switch (alt6) {
						case 1 :
							// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:62:10: '/' ^ atom2
							{
							char_literal15=(Token)match(input,24,FOLLOW_24_in_slash_exp194); 
							char_literal15_tree = (CommonTree)adaptor.create(char_literal15);
							root_0 = (CommonTree)adaptor.becomeRoot(char_literal15_tree, root_0);

							pushFollow(FOLLOW_atom2_in_slash_exp197);
							atom216=atom2();
							state._fsp--;

							adaptor.addChild(root_0, atom216.getTree());

							}
							break;

						default :
							if ( cnt6 >= 1 ) break loop6;
							EarlyExitException eee = new EarlyExitException(6, input);
							throw eee;
						}
						cnt6++;
					}

					}
					break;
				case 2 :
					// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:64:3: atom2 ( '?' ^)+
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_atom2_in_slash_exp207);
					atom217=atom2();
					state._fsp--;

					adaptor.addChild(root_0, atom217.getTree());

					// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:64:9: ( '?' ^)+
					int cnt7=0;
					loop7:
					while (true) {
						int alt7=2;
						int LA7_0 = input.LA(1);
						if ( (LA7_0==27) ) {
							alt7=1;
						}

						switch (alt7) {
						case 1 :
							// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:64:10: '?' ^
							{
							char_literal18=(Token)match(input,27,FOLLOW_27_in_slash_exp210); 
							char_literal18_tree = (CommonTree)adaptor.create(char_literal18);
							root_0 = (CommonTree)adaptor.becomeRoot(char_literal18_tree, root_0);

							}
							break;

						default :
							if ( cnt7 >= 1 ) break loop7;
							EarlyExitException eee = new EarlyExitException(7, input);
							throw eee;
						}
						cnt7++;
					}

					}
					break;
				case 3 :
					// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:66:3: atom ( '.' ^ durations )*
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_atom_in_slash_exp221);
					atom19=atom();
					state._fsp--;

					adaptor.addChild(root_0, atom19.getTree());

					// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:66:8: ( '.' ^ durations )*
					loop8:
					while (true) {
						int alt8=2;
						int LA8_0 = input.LA(1);
						if ( (LA8_0==23) ) {
							alt8=1;
						}

						switch (alt8) {
						case 1 :
							// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:66:9: '.' ^ durations
							{
							char_literal20=(Token)match(input,23,FOLLOW_23_in_slash_exp224); 
							char_literal20_tree = (CommonTree)adaptor.create(char_literal20);
							root_0 = (CommonTree)adaptor.becomeRoot(char_literal20_tree, root_0);

							pushFollow(FOLLOW_durations_in_slash_exp227);
							durations21=durations();
							state._fsp--;

							adaptor.addChild(root_0, durations21.getTree());

							}
							break;

						default :
							break loop8;
						}
					}

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "slash_exp"


	public static class atom2_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "atom2"
	// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:68:1: atom2 : ( set_of_dims ( '.' ^ durations )* | dimSet ( '.' ^ durations )* );
	public final aexp17Parser.atom2_return atom2() throws RecognitionException {
		aexp17Parser.atom2_return retval = new aexp17Parser.atom2_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal23=null;
		Token char_literal26=null;
		ParserRuleReturnScope set_of_dims22 =null;
		ParserRuleReturnScope durations24 =null;
		ParserRuleReturnScope dimSet25 =null;
		ParserRuleReturnScope durations27 =null;

		CommonTree char_literal23_tree=null;
		CommonTree char_literal26_tree=null;

		try {
			// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:69:3: ( set_of_dims ( '.' ^ durations )* | dimSet ( '.' ^ durations )* )
			int alt12=2;
			int LA12_0 = input.LA(1);
			if ( (LA12_0==31) ) {
				alt12=1;
			}
			else if ( (LA12_0==ALL||LA12_0==ID) ) {
				alt12=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 12, 0, input);
				throw nvae;
			}

			switch (alt12) {
				case 1 :
					// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:70:3: set_of_dims ( '.' ^ durations )*
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_set_of_dims_in_atom2244);
					set_of_dims22=set_of_dims();
					state._fsp--;

					adaptor.addChild(root_0, set_of_dims22.getTree());

					// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:70:15: ( '.' ^ durations )*
					loop10:
					while (true) {
						int alt10=2;
						int LA10_0 = input.LA(1);
						if ( (LA10_0==23) ) {
							alt10=1;
						}

						switch (alt10) {
						case 1 :
							// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:70:16: '.' ^ durations
							{
							char_literal23=(Token)match(input,23,FOLLOW_23_in_atom2247); 
							char_literal23_tree = (CommonTree)adaptor.create(char_literal23);
							root_0 = (CommonTree)adaptor.becomeRoot(char_literal23_tree, root_0);

							pushFollow(FOLLOW_durations_in_atom2250);
							durations24=durations();
							state._fsp--;

							adaptor.addChild(root_0, durations24.getTree());

							}
							break;

						default :
							break loop10;
						}
					}

					}
					break;
				case 2 :
					// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:72:3: dimSet ( '.' ^ durations )*
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_dimSet_in_atom2261);
					dimSet25=dimSet();
					state._fsp--;

					adaptor.addChild(root_0, dimSet25.getTree());

					// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:72:10: ( '.' ^ durations )*
					loop11:
					while (true) {
						int alt11=2;
						int LA11_0 = input.LA(1);
						if ( (LA11_0==23) ) {
							alt11=1;
						}

						switch (alt11) {
						case 1 :
							// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:72:11: '.' ^ durations
							{
							char_literal26=(Token)match(input,23,FOLLOW_23_in_atom2264); 
							char_literal26_tree = (CommonTree)adaptor.create(char_literal26);
							root_0 = (CommonTree)adaptor.becomeRoot(char_literal26_tree, root_0);

							pushFollow(FOLLOW_durations_in_atom2267);
							durations27=durations();
							state._fsp--;

							adaptor.addChild(root_0, durations27.getTree());

							}
							break;

						default :
							break loop11;
						}
					}

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "atom2"


	public static class atom_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "atom"
	// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:75:1: atom : ( dims | tags | '(' ( r_exp )* ')' | '[' ( dimSet | set_of_dimSets ) ']' );
	public final aexp17Parser.atom_return atom() throws RecognitionException {
		aexp17Parser.atom_return retval = new aexp17Parser.atom_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal30=null;
		Token char_literal32=null;
		Token char_literal33=null;
		Token char_literal36=null;
		ParserRuleReturnScope dims28 =null;
		ParserRuleReturnScope tags29 =null;
		ParserRuleReturnScope r_exp31 =null;
		ParserRuleReturnScope dimSet34 =null;
		ParserRuleReturnScope set_of_dimSets35 =null;

		CommonTree char_literal30_tree=null;
		CommonTree char_literal32_tree=null;
		CommonTree char_literal33_tree=null;
		CommonTree char_literal36_tree=null;

		try {
			// /Users/pedro/Documents/git/kraets/KRAETS/kql/src/main/java/edu/mit/ll/antlr/aexp17.g:76:3: ( dims | tags | '(' ( r_exp )* ')' | '[' ( dimSet | set_of_dimSets ) ']' )
			int alt15=4;
			switch ( input.LA(1) ) {
			case ALL:
				{
				alt15=1;
				}
				break;
			case ID:
				{
				int LA15_2 = input.LA(2);
				if ( (LA15_2==EOF||(LA15_2 >= ALL && LA15_2 <= AND)||LA15_2==ID||LA15_2==NOT||LA15_2==OR||(LA15_2 >= 18 && LA15_2 <= 21)||LA15_2==23||LA15_2==28||(LA15_2 >= 30 && LA15_2 <= 31)) ) {
					alt15=1;
				}
				else if ( (LA15_2==25) ) {
					alt15=2;
				}
